--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "webpack-dev-server": "^4.7.2"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
